<resources>
    <string name="app_name">Project PRPR DEMO</string>
    <string name="app_developing">Under developing&#8230;</string>
    <string name="app_please_wait">Please wait&#8230;</string>
    <string name="app_proceeding">Proceeding&#8230;</string>
    <string name="app_done">Done!</string>
    <string name="app_press_again_to_exit">Press again to exit app~</string>
    <string name="app_network_error">Network error!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">General Settings</string>
    <string name="action_account">Account</string>
    <string name="action_category">Categories</string>
    <string name="action_search">Search</string>
    <string name="action_net_book_add">Add to favorite</string>
    <string name="action_net_book_download">Download this book</string>
    <string name="action_watch_image">View image</string>
    <string name="action_local_book_add">Add a local book</string>

    <string name="title_activity_main">Project PRPR</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_plugin_center_data_source">PluginCenterDataSourceActivity</string>
    <string name="title_activity_data_source_item_initial">DataSourceItemInitialActivity</string>
    <string name="title_activity_data_source_item_detail">DataSourceItemDetailActivity</string>
    <string name="title_activity_data_source_item_chapter">DataSourceItemChapterActivity</string>
    <string name="title_activity_reader">ReaderActivity</string>
    <string name="title_activity_view_image">ViewImageActivity</string>

    <string name="drawer_item_name_library_local">Local Library</string>
    <string name="drawer_item_name_plug_in_center">Plug-in Center</string>
    <string name="drawer_item_name_dictionary">Dictionary</string>
    <string name="drawer_item_name_cloud">Cloud Service</string>
    <string name="drawer_item_name_settings">Settings</string>

    <string name="plugin_center_items_data_source">Data Source Plug-ins</string>
    <string name="plugin_center_items_formats">Reading Formats Plug-ins</string>

    <!-- This part should not be contained in string-array, because it's hard to access item name;
         And all of these strings are beginning with "novel_info_", so it's easy to access. -->
    <string name="novel_info_loading">Loading&#8230;</string>
    <string name="novel_info_no_intro">No introduction.</string>
    <string name="novel_info_title">Title</string>
    <string name="novel_info_author">Author</string>
    <string name="novel_info_data_source">From</string>
    <string name="novel_info_category">Category</string>
    <string name="novel_info_status">Status</string>
    <string name="novel_info_last_update">Last Update</string>
    <string name="novel_info_latest_chapter">Latest Chapter</string>
    <string name="novel_info_short_intro">Short Intro</string>
    <string name="novel_info_full_intro">Full Intro</string>
    <string name="novel_info_word_count">Word Count</string>

    <string name="netnovel_download_not_added">Please add book to bookshelf first!</string>
    <string name="netnovel_download_option_check_for_update">Check Updates</string>
    <string name="netnovel_download_option_update_uncached_volumes">Download New</string>
    <string name="netnovel_download_option_force_update_all">ReDownload All</string>
    <string name="netnovel_download_option_select_and_update">Choose to download</string>

    <!-- Reader strings-->
    <string name="reader_please_wait">Please wait&#8230;&#8230;</string>
    <string name="reader_engine_v1_parsing">V1 engine is parsing content</string>
    <string name="reader_already_first_chapter">Already the begin</string>
    <string name="reader_already_last_chapter">Already the end</string>
    <string name="reader_previous_chapter">Go previous chapter</string>
    <string name="reader_next_chapter">Go next chapter</string>
    <string name="reader_daynight">Switch day/night mode</string>
    <string name="reader_jump">Jump page</string>
    <string name="reader_find">Find content</string>
    <string name="reader_config">Reader settings</string>
    <string name="reader_v1_notice">V1 engine notice</string>
    <string name="reader_jump_last">Jump to where you left?</string>
    <string name="reader_rotate">Rotate for 90 degrees in clockwise</string>
    <string name="reader_download">Save image</string>
    <string name="reader_custom_background">Custom reading BG</string>
    <string name="reader_custom_font">Custom reading font</string>
    <string name="reader_font_size">Font size</string>
    <string name="reader_line_distance">Distance between lines</string>
    <string name="reader_paragraph_distance">Distance between paragraphs</string>
    <string name="reader_paragraph_edge_distance">Distance between paragraph and edge</string>
    <string name="reader_view_image_no_image">Please press this button on a page containing a image</string>
    <string name="reader_font_system">Use system default</string>
    <string name="reader_font_custom">Use custom ttf/otf font file</string>
    <string name="reader_background_system">Use default emulated paper</string>
    <string name="reader_background_custom">Use custom image</string>

    <string name="dialog_positive_known">GOT IT</string>
    <string name="dialog_positive_confirm">Confirm</string>
    <string name="dialog_positive_yes">Yes</string>
    <string name="dialog_negative_no">No</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_content_force_write_file">Sure to force write file?</string>
    <string name="dialog_content_saved_path">Chosen path:\n</string>
    <string name="dialog_content_remove_from_bookshelf">Are you sure to remove this book from bookshelf?&#x000A;If this book is a netbook, all the novel content will be wiped;&#x000A;Else you book source file will be kept, but bookshelf record will be removed.</string>
    <string name="dialog_content_downloading">Downloading&#8230;</string>
    <string name="dialog_title_found_file">Target file exists.</string>
    <string name="dialog_title_save_file_name">Type file name to save (NO .JPG)</string>
    <string name="dialog_title_remove_from_bookshelf">Remove book?</string>
    <string name="dialog_title_choose_download_option">Choose download option</string>

    <string name="setting_language">Language</string>
    <string name="setting_language_system">Same as system</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_sc">Simplified Chinese</string>
    <string name="setting_language_tc">Traditional Chinese</string>
    <string name="setting_clear_cache">Clear cache</string>
    <string name="setting_clear_cache_explanation">Two algorithms for clearing cache~</string>
    <string name="setting_clear_cache_simple">Fast and general</string>
    <string name="setting_clear_cache_advanced">Slow but effective</string>
    <string name="setting_clear_cache_clearing">Clearing&#8230;</string>
    <string name="setting_clear_cache_cancelled">Cancelled</string>
    <string name="setting_clear_cache_succeeded">Done!</string>
    <string name="setting_about">About</string>
    
    <string name="bookshelf_remove">Remove this book</string>
    <string name="bookshelf_view_detail">View detail</string>

</resources>
