<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library_local"
            android:icon="@drawable/ic_menu_library_local"
            android:title="@string/drawer_item_name_library_local" />
        <item
            android:id="@+id/nav_plug_in_center"
            android:icon="@drawable/ic_menu_plug_in_center"
            android:title="@string/drawer_item_name_plug_in_center" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_menu_dictionary"
            android:title="@string/drawer_item_name_dictionary" />
    </group>

    <group android:id="@+id/nav_group_addition"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_menu_cloud"
            android:title="@string/drawer_item_name_cloud" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/drawer_item_name_settings" />
    </group>
</menu>
